Bug 1605833 - Add FLAC and Opus support back to Widevine on Windows. r=bryce

Bug 1510424/D13135 remove them from Windows along with Android by mistake.
This patch also moves some code to separate Android only logic from other
platforms to avoid making similar mistakes.

Differential Revision: https://phabricator.services.mozilla.com/D59248